# HW_11--12--13--14-WEB

./: .env  .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  middlewares.py  pyproject.toml  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1318220337b7_add_user.py  36daee23ce06_add_user_role.py  5dc30fab059f_init.py  80cb4f69eb69_add_authentication.py  c78df6f51e2c_email_unique.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test.db  test_2e2_auth.py  test_unit_repositori_user.py  test_unit_repository_contacts.py
